Resolved some issues with sizing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -28,12 +28,6 @@ body {
 
 body {
     font-family: "Inter", sans-serif;
-    background: radial-gradient(
-        circle at 22% 30%,
-        #18191c 20%,
-        #101011 50%,
-        #09181a 90%,
-        #021f23
-    );
+    background: radial-gradient(circle at 22% 30%, #18191c 20%, #101011 50%, #09181a 90%, #021f23);
     color: var(--opaque-white, white);
 }
